--- a/handouts/Makefile
+++ b/handouts/Makefile
@@ -7,13 +7,6 @@ overviews/%.xml: ../outlines/overviews/%.md
 	../tools/overview2xml $^ > $@
 
 schedule.sect: $(MKSCHEDULE)
-	$(MKSCHEDULE) mtwf-fall > $@
+	$(MKSCHEDULE) 321-fall > $@
 
-# Hacks for generating a decent PDF of the schedule
-sched.sect: $(MKSCHEDULE)
-	$(MKSCHEDULE) mtwf-spring-alt > $@
-sched-munge.html: sched.html
-	../tools/munge-schedule $< > $@
-schedule.ps: sched-munge.html schedule.h2p
-	html2ps -D -f schedule.h2p -o $@ $<
 
